# truesight_autopilot

./: .env.example  .gitignore  FORCE_DEPLOY_RESTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_local.sh
.github/workflows/: smoke.yml  test.yml
app/: attention_watchdog.py  auth.py  auth_routes.py  auto_advance.py  aws_monitor.py  beta_deploy.py  ci_pingback.py  config.py  context.py  daily_briefing.py  deploy_watcher.py  edgar_logger.py  email_poller.py  engagement.py  fix_agent.py  followup_loop.py  followup_probes.py  followups.py  gemini_client.py  github_client.py  governor_registry.py  grok_client.py  host_identity.py  identity_binding.py  llm_client.py  main.py  policy.py  research.py  roles.py  telegram_adapter.py  tool_registry.py  topic_names.py  turn_convergence.py  vault.py  vault_app.py  vault_routes.py  voice.py  voice_output.py  watch_runner.py
app/data/: events_catalog_snapshot.json
app/llm/: __init__.py  base.py  bigmodel.py  deepseek.py  litellm_provider.py  openai_compatible.py  registry.py  usage_log.py
app/templates/vault/: base.html  followups.html  index.html  login.html  status.html
app/tools/: README.md  artifact_tools.py  attachment_tools.py  aws_tools.py  dao_identity.py  dao_submission.py  deploy.py  followup_tools.py  fs_tools.py  gas_deploy_project.py  git_tools.py  github_tools.py  gmail_tools.py  google_creds.py  google_docs.py  google_drive.py  google_sheets.py  http_fetch.py  inventory_lookup.py  lookup_event_docs.py  orchestration_specs.py  pdf_tools.py  personal_git_tools.py  qr_scanner.py  read_oracle_logs.py  search_context.py  ssh_tools.py  sync_beta_to_prod.py  telegram_post.py  telegram_topic.py  transcript_search.py  transcript_tools.py  upload_file_to_github.py  vault_tools.py  watch_tools.py  web_search.py
config/gmail/: README.md
config/google/: README.md
config/nginx/: oracle-advisory.conf  sophia-zones.conf  sophia.conf
deploy/: nginx-sophia.conf
docs/: LLM_PROVIDER_ROADMAP.md  PROPOSAL_claude_agent_sdk_fix_loop.md  SOPHIA_NGINX_SETUP.md
followups/: state.json
scripts/: append_to_transcript.py  deploy.sh  distribute_sophia_ssh_key.sh  extract_pdf_text.py  fetch_events_snapshot.py  generate_ssh_key.sh  git-credential-sophia.sh  launch_ec2.sh  launch_ec2_nelanco_claude.sh  launch_local_autopilot.py  ocr_image.py  placard_generator.py  rollup_llm_contributions.py  setup_git.sh  smoke_tools.py  telethon_login.py  user-data-claude.sh  user-data.sh
systemd/: truesight-autopilot-telegram.service  truesight-autopilot-watchdog.service  truesight-autopilot.service  truesight-vault.service
tests/: conftest.py  e2e_governor_chat.py  test_ack_queued.py  test_adapter_thread_lock.py  test_approved_by_e2e.py  test_attention_watchdog.py  test_auto_advance.py  test_auto_advance_loop.py  test_auto_advance_signal.py  test_aws_tools.py  test_beta_deploy.py  test_chat_blocking_convergence.py  test_chat_session_lock_ordering.py  test_chat_turn_tracks.py  test_context_management.py  test_daily_briefing_handoffs.py  test_default_role_skip_prompt.py  test_degenerate_thread_selfheal.py  test_deploy_hash_noop.py  test_deploy_nginx_restart_order.py  test_deploy_watcher.py  test_empty_response_guard.py  test_engagement.py  test_events_catalog.py  test_externalize_nonstring_tool_result.py  test_followup_loop.py  test_followup_probes.py  test_followup_tools.py  test_followups.py  test_gas_deploy_project_tool.py  test_git_tools.py  test_github_tools_create_repo.py  test_gmail_tools.py  test_google_sheets.py  test_handoff_prefix.py  test_history_trim.py  test_host_identity.py  test_http_fetch.py  test_identity_binding.py  test_normalize_submission_labels.py  (+25 more)
tests/integration/: README.md  _autopilot_client.py  run_all.sh  test_chat_cancel.py  test_chat_interjection.py  test_chat_smoke.py
tests/llm/: test_deepseek.py
