[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truesight-autopilot"
version = "0.1.0"
description = "Autonomous SRE + developer for TrueSight DAO"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.120.0",
    "PyGithub>=2.3.0",
    "boto3>=1.34.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyzbar>=0.1.9",
    "Pillow>=10.0.0",
]

[project.scripts]
truesight-autopilot = "app.main:main"

[tool.ruff]
# Lenient baseline — catches style bugs cheaply without blocking on
# high-noise categories. Tighten incrementally as the codebase improves.
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (logic bugs)
    "SIM",  # flake8-simplify (simplifiable patterns)
]
lint.ignore = [
    "E501",   # line-too-long — not enforcing
    "ARG",    # unused-arg — common in tool specs / lambdas
    "E402",   # module-import-not-at-top-of-file — intentional late imports
    "ERA001", # commented-out-code — not worth the churn
    "E741",   # ambiguous-variable-name — `l`, `O`, `I` are fine in context
    "N",      # naming-convention — too noisy for existing codebase
    "SIM105", # suppressible-exception — bare except: pass is intentional
    "SIM102", # collapsible-if — readability preference
    "SIM108", # if-else-block-instead-of-if-exp — readability preference
    "SIM110", # reimplemented-builtin — minor
    "SIM115", # open-file-with-context-handler — some cases need raw open
    "SIM117", # multiple-with-statements — readability preference
]

# Format: match black-ish defaults
line-length = 120
indent-width = 4
target-version = "py310"

[tool.pytest.ini_options]
# Default `pytest` runs the hermetic UNIT suite. Integration + e2e are excluded
# here because they need a running server / playwright (run them explicitly with
# their own setup). Test deps live in requirements-dev.txt; CI runs them in smoke.yml.
testpaths = ["tests"]
addopts = "--ignore=tests/integration --ignore=tests/test_upload_e2e.py"
