[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truesight-autopilot"
version = "0.1.0"
description = "Autonomous SRE + developer for TrueSight DAO"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.120.0",
    "PyGithub>=2.3.0",
    "boto3>=1.34.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyzbar>=0.1.9",
    "Pillow>=10.0.0",
]

[project.scripts]
truesight-autopilot = "app.main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "ARG", "E402", "ERA001", "E741", "N", "SIM105", "SIM102", "SIM108", "SIM110", "SIM115", "SIM117"]

[tool.pytest.ini_options]
# Default `pytest` runs the hermetic UNIT suite. Integration + e2e are excluded
# here because they need a running server / playwright (run them explicitly with
# their own setup). Test deps live in requirements-dev.txt; CI runs them in smoke.yml.
testpaths = ["tests"]
addopts = "--ignore=tests/integration --ignore=tests/test_upload_e2e.py"
